# ufo

./: .codecov.yml  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  COPYING  Dockerfile  LICENSE.md  README.md  VERSION.cmake  build_ufo.csh  buildspec_clang.yml  buildspec_gnu.yml  buildspec_intel.yml  codecov.yml  gsidiag_aod_bin2nc4.f90  gsidiag_bin2txt.f90  gsidiag_conv_bin2nc4.f90  gsidiag_rad_bin2nc4.f90  gsiprofiles_bin2nc4.f90  gsiprofiles_bin2nc4_orig.f90  m_diag_conv.f90  m_diag_raob.f90  m_distribution.f90  mkufo  nc_diag_cat.F90  ncdc_data.F90  ncdr_dims.f90  ncdr_global_attrs.f90  ncdr_vars.f90  ncdw_data2d.F90  ncdw_metadata.F90  ncdw_types.F90  ncdw_varattr.F90  read_aod_diag.f90  read_aod_diag_double.f90  read_aod_diag_single.f90  read_diag.f90  read_profiles.f90  ufo-import.cmake.in  (+1 more)
CI/: CMakeLists.txt  buildspec_clang.yml  buildspec_gnu.yml  buildspec_intel.yml  clone.sh  codecov_script.sh  codecov_script_JCSDA-internal.sh
CI/cmake/: CTestConfig.cmake
CI/meto/: CMakeLists.txt  build-and-test.sh  check-build-group.sh
docs/: CMakeLists.txt  Doxyfile.in  mainpage.h  organization.md
docs/source/: conf.py  config_ec_tools.rst  config_mac.rst
resources/: CMakeLists.txt
resources/bmatrix/gnssro/: gnssro_bmatrix.txt
resources/namemap/: bayesian_name_map.yaml  test_name_map.yaml
resources/rmatrix/gnssro/: gnssro_ba_rmatrix.nl  gnssro_ba_rmatrix_avtemp.nl  gnssro_ba_rmatrix_latitude.nc4
resources/rmatrix/rttov/: amsr_gcomw1_rmatrix_test.nc4  atms_noaa_20_rmatrix_test.nc4  atovs_metopb_rmatrix_test.nc4  gmihigh_gpm_rmatrix_test.nc4  iasi_metopb_rmatrix_test.nc4  ssmis_dmspf17_rmatrix_test.nc4
src/: CMakeLists.txt  GeoVaLs.cc  GeoVaLs.h  ObsSpace.cc  ObsWSpeed.h  ufo_obs_vectors.F90  ufo_vars_mod.F90  ufo_wspeed_mod.F90
src/mains/: CMakeLists.txt  CPPLINT.cfg  ObsErrorWithinGroupCovDiags.h  RunCRTM.h  RunRTTOV.h  ufoObsErrorWithinGroupCovDiags.cc  ufoRunCRTM.cc  ufoRunRTTOV.cc
src/ufo/: AnalyticInit.cc  AnalyticInit.h  BackgroundCheck.cc  BackgroundCheck.h  BackgroundCheck.interface.F90  BackgroundCheck.interface.h  BlackList.cc  BlackList.h  CMakeLists.txt  Fortran.h  FortranAtmosphere.h  FortranConstituents.h  FortranGeoVals.h  FortranLocations.h  FortranMarine.h  FortranObsCheck.h  GeoVaLs.cc  GeoVaLs.h  GeoVaLs.interface.F90  GeoVaLs.interface.h  LinearObsBiasOperator.cc  LinearObsBiasOperator.h  LinearObsOperator.cc  LinearObsOperator.h  LinearObsOperatorBase.cc  LinearObsOperatorBase.h  Locations.cc  Locations.h  Locations.interface.F90  Locations.interface.h  ObsAod.h  ObsAod.interface.F90  ObsBias.cc  ObsBias.h  ObsBiasCovariance.cc  ObsBiasCovariance.h  ObsBiasIncrement.cc  ObsBiasIncrement.h  ObsBiasOperator.cc  ObsBiasOperator.h  (+123 more)
src/ufo/aerosols/: CMakeLists.txt
src/ufo/atmosphere/: CMakeLists.txt  FortranAtmosphere.h
src/ufo/atmsfcinterp/: CMakeLists.txt  ObsAtmSfcInterp.cc  ObsAtmSfcInterp.h  ObsAtmSfcInterp.interface.F90  ObsAtmSfcInterp.interface.h  ObsAtmSfcInterpParameters.h  ObsAtmSfcInterpTLAD.cc  ObsAtmSfcInterpTLAD.h  ObsAtmSfcInterpTLAD.interface.F90  ObsAtmSfcInterpTLAD.interface.h  ufo_atmsfc_mod.F90  ufo_atmsfcinterp_mod.F90  ufo_atmsfcinterp_tlad_mod.F90
test/: CMakeLists.txt  ufo_data_checker.py.in  ufo_data_downloader.py.in  ufo_ioda_data_downloader.py
test/mains/: TestAircraftTrackCheck.cc  TestChannelsParser.cc  TestConventionalProfileProcessing.cc  TestDataExtractor.cc  TestFieldOfView.cc  TestFortranGeoVaLs.cc  TestGaussianThinning.cc  TestGeoVaLs.cc  TestGeoVaLsSpec.cc  TestGeometryCalculations.cc  TestHistoryCheck.cc  TestIntSetParser.cc  TestIntegralImage.cc  TestLinearObsBiasOperator.cc  TestLocations.cc  TestMetOfficeBuddyCheck.cc  TestMetOfficeBuddyPairFinder.cc  TestMetOfficeRadianceErrorMatrices.cc  TestMetOfficeSort.cc  TestNearestNeighborInterpolation.cc  TestObsBias.cc  TestObsBiasCovariance.cc  TestObsBiasCovarianceDetails.cc  TestObsBiasIO.cc  TestObsBiasIncrement.cc  TestObsCheck.cc  TestObsDiagnostics.cc  TestObsErrorAssign.cc  TestObsErrorCovariance.cc  TestObsFilterData.cc  TestObsFilters.cc  TestObsFunction.cc  TestObsOperator.cc  TestObsOperatorTLAD.cc  TestObsVector.cc  TestObservationSpace.cc  TestOperatorUtils.cc  TestParallelObsDistribution.cc  TestParallelPoissonDiskThinning.cc  TestParameters.cc  (+20 more)
test/ncdiag/: m_diag_aircft.f90  ncdf_string_m.f90  ncdr_alloc_assert.f90  ncdw_metadata.F90  ncdw_types.F90  ut_ncmass.F90
test/obsfunction/: ObsFunction.h
test/testinput/: 2mtemp.yaml  Chem_MieRegistry.rc  abi_ahi_crtm.yaml  adt.yaml  adt.yml  aircraft.json  aircraft.yaml  aircraft_qc.yaml  airs_crtm.yaml  airs_crtm_bc.yaml  airs_qc_filters.yaml  airs_rttov.yaml  amsr2_clw_ret.yaml  amsr2_crtm.yaml  amsr2_qc.yaml  amsr2_qc_halo.yaml  amsr2_rttov_ops_qc_rttovonedvarcheck.yaml  amsr2_rttov_qc.yaml  amsua.json  amsua.yaml  amsua_allsky_gsi_qc.yaml  amsua_crtm.json  amsua_crtm.yaml  amsua_crtm_bc.yaml  amsua_crtm_bc_channelnobc_geos.yaml  amsua_crtm_bc_geos.yaml  amsua_crtm_geos.yaml  amsua_n19_geovals.nc4  amsua_n19_obs.nc4  amsua_qc.yaml  amsua_qc_clwretmw.yaml  amsua_qc_filters.yaml  amsua_qc_filters_geos.yaml  amsua_qc_miss_val.yaml  amsua_rttov.json  amsua_rttov.yaml  amsua_rttov_qc_1dvar.yaml  amsua_rttovcpp.yaml  amsua_seaice_qc.yaml  aod.json  (+425 more)
test/ufo/: AircraftTrackCheck.h  ConventionalProfileProcessing.h  DataExtractor.h  Expect.h  FieldOfView.h  FortranGeoVaLs.h  GaussianThinning.h  GeoVaLs.h  GeometryCalculations.h  HistoryCheck.h  IntegralImage.h  LinearObsBiasOperator.h  Locations.h  MetOfficeBuddyCheck.h  MetOfficeBuddyPairFinder.h  MetOfficeRadianceErrorMatrices.h  MetOfficeSort.h  NearestNeighborInterpolation.h  ObsBias.h  ObsBiasCovarianceDetails.h  ObsBiasIO.h  ObsBiasIncrement.h  ObsDiagnostics.h  ObsErrorAssign.h  ObsFilterData.h  ObsFilters.h  ObsFunction.h  OperatorUtils.h  ParallelObsDistribution.h  ParallelPoissonDiskThinning.h  Parameters.h  PiecewiseLinearInterpolation.h  PoissonDiskThinning.h  Predictor.h  PrimitiveVariables.h  ProcessWhere.h  ProfileConsistencyChecks.h  Reconditioning.h  RecordHandler.h  RecursiveSplitter.h  (+12 more)
test/variables/: Variables.h
(+3366 files in other folders)
